--- a/src/services.css
+++ b/src/services.css
@@ -14,7 +14,38 @@
 .services h2{
     font-size: 48px;
     text-transform: uppercase;
-    color: fff;
+    color: #fff;
+    margin-bottom: 48px;
     margin-top: 0;
     padding: 0;
+}
+.services > .row{
+    display: flex;
+    justify-content: space-around;
+}
+.services > .row span{
+    background-color: #fff;
+    width:  112px;
+    height: 112px;
+    display: inline-block;
+    border-radius: 50%;
+    color: #1d809f;
+    font-size: 36px;
+    line-height: 120px;
+}
+
+.services > .row span ion-icon{
+    contain: none;
+}
+.services > .row h4{
+    margin-bottom: .5rem;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.2;
+    font-size: 24px;
+    color: #fff;
+}
+.services > .row p ion-icon{
+    color: red;
+
 }
