--- a/src/componentspage/testeum/services.css
+++ b/src/componentspage/testeum/services.css
@@ -1,5 +1,5 @@
 .services{
-    background-color: #1d809f;
+    background-color: rgb(34, 25, 63);
     padding-top: 120px;
     padding-bottom: 120px;
     text-align: center;
