--- a/src/componentspage/testeum/Navigation.css
+++ b/src/componentspage/testeum/Navigation.css
@@ -1,7 +1,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    background-color: black;
+    background-color: transparent;
     align-items: center;
     padding-right: 20px;
     padding-left: 20px;
@@ -20,4 +20,5 @@ nav ul li {
 }
 nav ul li a{
     text-decoration: none;
+    
 }
