--- a/src/index.scss
+++ b/src/index.scss
@@ -175,7 +175,7 @@ code {
     background-size: cover;
 }
 
-.aguabg { 
+.cancerdatabg { 
     background-image: url("./img/lingmarc.jpg");
     height: 400px; 
     background-position: center;
@@ -315,7 +315,7 @@ code {
     color: white;
 }
 
-.aguabg:hover .overlay, .hambabg:hover .overlay, .todobg:hover .overlay  {
+.cancerdatabg:hover .overlay, .hambabg:hover .overlay, .todobg:hover .overlay  {
     opacity: 1;
 }
 
